<resources>
    <string name="app_name">Location Notifier</string>
    <string name="invitation_text">Enter your location notification details:</string>
    <string name="label_choose_location">Choose location point and radius</string>
    <string name="enter_location_btn_text">Choose Location</string>
    <string name="label_enter_a_message">Enter a notification message to send:</string>
    <string name="label_enter_a_phone">Enter a phone number:</string>
    <string name="add_contact_btn_text">Add from contacts</string>
    <string name="submit_btn_text">Save</string>
    <string name="title_activity_choose_location_on_map">Choose Location</string>
    <string name="tv_on_map_coords">latitude: {0}, longitude: {1}\nradius: {2}</string>
    <string name="tv_radius_text">Radius:</string>
    <string name="submit_location_data">Submit Location</string>
    <string name="tv_or_text">or</string>
    <string name="dialog_title_choose_phone">Choose the phone number</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_error_message">Please, fulfill all the necessary data</string>
    <string name="dialog_title_confirm_data">Confirm submitted data</string>
    <string name="dialog_confirmation_message">Latitude: {0}\nLongitude: {1}\nRadius: {2}\nContact number:
        {3}\nMessage: {4}
    </string>
    <string name="default_message">Generated on latitude: {0} longitude: {1} at {2}</string>
    <string name="dialog_coming_soon">This feature is still being developed.</string>
    <string name="btn_start_text">Start</string>
    <string name="btn_started_text">Started</string>
    <string name="notification_content_text">You have a new notification</string>
    <string name="ok_alert_button_text">OK</string>
    <string name="alert_negative_button_text">Cancel</string>
    <string name="save_alert_button_text">Save</string>
    <string name="notification_location_notifier_title_text">Location Notifier</string>
    <string name="notification_service_stopped_text">Service stopped</string>
    <string name="speaker_text_message_sent">The proximity message has been sent</string>
    <string name="speaker_text_starting_service">Starting location tracking</string>
    <string name="speaker_text_exiting">Quitting</string>
    <string name="dialog_title_under_construction">This feature is still under construction</string>
    <string name="dialog_not_ready_message">This feature is actually navailable in this Android version. We are working
        on it
    </string>
    <string name="location_service_permission">com.caesar84mx.LOCATION_TRACKING</string>
    <string name="location_service_restart_permission">com.caesar84mx.LOCATION_TRACKING_RESTART</string>
    <string name="notification_service_stopped_unterminated_text">Service stopped, but task has not been completed
    </string>
</resources>
