<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/invitation_text"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_choose_location"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_location_btn_text"
                android:textAllCaps="false"
                android:layout_gravity=""
                android:id="@+id/btnChooseLocation"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLight"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/label_enter_a_phone"/>
        <EditText
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:inputType="phone"
                android:id="@+id/edPhoneNumber"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_or_text"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/add_contact_btn_text"
                android:id="@+id/btnAddContact"/>
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLight"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/label_enter_a_message"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"
                android:id="@+id/edShortMessage"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/submit_btn_text"
            android:id="@+id/btnSubmit"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLight"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCoordinates"
                tools:text="Coordinates: @1323244, @324454323"/>

        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sTaskSwitch"
                android:visibility="gone"
                android:gravity="end"
                android:checked="false"
                tools:visibility="visible"
                tools:checked="true"/>
    </LinearLayout>
</LinearLayout>